--- a/proposal/reference.bib
+++ b/proposal/reference.bib
@@ -1,19 +1,26 @@
 
 
 @misc{liu2020effective,
-      title={On Effective Parallelization of Monte Carlo Tree Search}, 
-      author={Anji Liu and Yitao Liang and Ji Liu and Guy Van den Broeck and Jianshu Chen},
-      year={2020},
-      eprint={2006.08785},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+  title         = {On Effective Parallelization of Monte Carlo Tree Search},
+  author        = {Anji Liu and Yitao Liang and Ji Liu and Guy Van den Broeck and Jianshu Chen},
+  year          = {2020},
+  eprint        = {2006.08785},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
 }
 
 @misc{weigel2017monte,
-      title={Monte Carlo methods for massively parallel computers}, 
-      author={Martin Weigel},
-      year={2017},
-      eprint={1709.04394},
-      archivePrefix={arXiv},
-      primaryClass={physics.comp-ph}
+  title         = {Monte Carlo methods for massively parallel computers},
+  author        = {Martin Weigel},
+  year          = {2017},
+  eprint        = {1709.04394},
+  archiveprefix = {arXiv},
+  primaryclass  = {physics.comp-ph}
+}
+
+
+@misc{guillaumeMCTS,
+  title  = {Parallel Monte-Carlo Tree Search},
+  author = {Guillaume M.J-B. Chaslot and Mark H.M. Winands and H. Jaap van den Herik},
+  year   = {2008}
 }
