1. add overall design 2. add timeline

--- a/proposal/reference.bib
+++ b/proposal/reference.bib
@@ -1,4 +1,15 @@
 
+@article{alphaGo,
+author = {Silver, David and Huang, Aja and Maddison, Christopher and Guez, Arthur and Sifre, Laurent and Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
+year = {2016},
+month = {01},
+pages = {484-489},
+title = {Mastering the game of Go with deep neural networks and tree search},
+volume = {529},
+journal = {Nature},
+doi = {10.1038/nature16961}
+}
+
 
 @misc{liu2020effective,
   title         = {On Effective Parallelization of Monte Carlo Tree Search},
@@ -24,3 +35,6 @@
   author = {Guillaume M.J-B. Chaslot and Mark H.M. Winands and H. Jaap van den Herik},
   year   = {2008}
 }
+
+
+
