1. add related work

--- a/proposal/reference.bib
+++ b/proposal/reference.bib
@@ -1,13 +1,13 @@
 
 @article{alphaGo,
-author = {Silver, David and Huang, Aja and Maddison, Christopher and Guez, Arthur and Sifre, Laurent and Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
-year = {2016},
-month = {01},
-pages = {484-489},
-title = {Mastering the game of Go with deep neural networks and tree search},
-volume = {529},
-journal = {Nature},
-doi = {10.1038/nature16961}
+  author  = {Silver, David and Huang, Aja and Maddison, Christopher and Guez, Arthur and Sifre, Laurent and Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
+  year    = {2016},
+  month   = {01},
+  pages   = {484-489},
+  title   = {Mastering the game of Go with deep neural networks and tree search},
+  volume  = {529},
+  journal = {Nature},
+  doi     = {10.1038/nature16961}
 }
 
 
@@ -37,4 +37,19 @@ doi = {10.1038/nature16961}
 }
 
 
+@article{appplMCTS,
+  author  = {Magnuson and Max},
+  journal = {University of Minnesota, Morris Undergraduate Journal},
+  number  = {2},
+  title   = {Monte Carlo Tree Search and Its Applications},
+  volume  = {2},
+  year    = {2015}
+}
 
+@inproceedings{Liu2020Watch,
+  title     = {Watch the Unobserved: A Simple Approach to Parallelizing Monte Carlo Tree Search},
+  author    = {Anji Liu and Jianshu Chen and Mingze Yu and Yu Zhai and Xuewen Zhou and Ji Liu},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2020},
+  url       = {https://openreview.net/forum?id=BJlQtJSKDB}
+}
